force-app/main/default/objects/Group_Result__c/Group_Result__c.object-meta.xml
<CustomObject>
    <label>Group Result</label>
    <nameField>
        <displayFormat>GR-{0000}</displayFormat>
        <label>Group Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>