force-app/main/default/objects/Group_Result__c/fields/Goal_Difference__c.field-meta.xml
<CustomField>
    <fullName>Goal_Difference__c</fullName>
    <formula>Goals_For__c -  Goals_Against__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>