force-app/main/default/objects/Group_Result__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Group Results</relationshipLabel>
    <relationshipName>Group_Results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>