force-app/main/default/objects/Group_Result__c/listViews/Group_Results.listView-meta.xml
<ListView>
    <fullName>Group_Results</fullName>
    <columns>Tournament__c</columns>
    <columns>Team__c</columns>
    <columns>Wins__c</columns>
    <columns>Losses__c</columns>
    <columns>Draws__c</columns>
    <columns>Points__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Group Results</label>
</ListView>